deploy/k8s/base/plugins/aspects/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  labels:
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/part-of: aspects
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: native
  selector:
    app.kubernetes.io/name: clickhouse
---
apiVersion: v1
kind: Service
metadata:
  name: superset
  labels:
    app.kubernetes.io/name: superset
    app.kubernetes.io/part-of: aspects
spec:
  type: ClusterIP
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: superset
---
apiVersion: v1
kind: Service
metadata:
  name: ralph
  labels:
    app.kubernetes.io/name: ralph
    app.kubernetes.io/part-of: aspects
spec:
  type: ClusterIP
  ports:
    - port: 8100
      targetPort: 8100
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ralph
